# trt-daemon

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  ForgeX.sh  README.md  docker-compose.yml  entrypoint.sh  install.sh
deploy/: trt-daemon.service
docs/: architecture.md  gitlab-ci.md  operations.md
include/: trt_server.hpp
scripts/: infer_image.py  infer_image_tcp.py
src/: client.cpp  daemon.cpp  trt_server.cpp
